# Color

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE  README.md  cabal.project  stack-coveralls.yaml  stack-doctests.yaml  stack-extra-deps.yaml  stack.lts-12.26.yaml  stack.yaml
.azure/: job.yml  (+1 more)
Color/: CHANGELOG.md  Color.cabal  LICENSE  README.md  mkStdSVGModule
Color/bench/: Conversion.hs  YCbCr.hs
Color/files/: mkStdSVGModule  svg-colors.txt
Color/src/Graphics/: Pixel.hs
Color/src/Graphics/Color/: Adaptation.hs  Algebra.hs  Model.hs  Space.hs  Standard.hs
Color/src/Graphics/Color/Adaptation/: Internal.hs  VonKries.hs
Color/src/Graphics/Color/Algebra/: Binary.hs  Elevator.hs
Color/src/Graphics/Color/Illuminant/: CIE1931.hs  CIE1964.hs  Wikipedia.hs
Color/src/Graphics/Color/Illuminant/ICC/: PCS.hs
Color/src/Graphics/Color/Illuminant/ITU/: Rec470.hs  Rec601.hs
Color/src/Graphics/Color/Model/: Alpha.hs  CMYK.hs  HSI.hs  HSL.hs  HSV.hs  Internal.hs  LCH.hs  RGB.hs  X.hs  Y.hs  YCbCr.hs
Color/src/Graphics/Color/Space/: DIN99.hs  Internal.hs  RGB.hs
Color/src/Graphics/Color/Space/CIE1931/: RGB.hs  XYZ.hs
Color/src/Graphics/Color/Space/CIE1976/: LAB.hs  LUV.hs
Color/src/Graphics/Color/Space/CIE1976/LAB/: LCH.hs
Color/src/Graphics/Color/Space/CIE1976/LUV/: LCH.hs
Color/src/Graphics/Color/Space/RGB/: AdobeRGB.hs  Alternative.hs  CIERGB.hs  Derived.hs  Internal.hs  Luma.hs  SRGB.hs  VGamut.hs
Color/src/Graphics/Color/Space/RGB/Alternative/: CMYK.hs  HSI.hs  HSL.hs  HSV.hs  YCbCr.hs
Color/src/Graphics/Color/Space/RGB/Derived/: AdobeRGB.hs  CIERGB.hs  SRGB.hs
Color/src/Graphics/Color/Standard/: Internal.hs  RAL.hs  SVG.hs
Color/src/Graphics/Pixel/: ColorSpace.hs  Internal.hs
Color/tests/: doctests.hs
Color/tests/Graphics/Color/: SpaceSpec.hs
Color/tests/Graphics/Color/Algebra/: ElevatorSpec.hs
Color/tests/Graphics/Color/Illuminant/: CIE1931Spec.hs  CIE1964Spec.hs  Common.hs  WikipediaSpec.hs
Color/tests/Graphics/Color/Model/: CMYKSpec.hs  Common.hs  HSISpec.hs  HSLSpec.hs  HSVSpec.hs  LCHSpec.hs  YCbCrSpec.hs
Color/tests/Graphics/Color/Space/: Common.hs
Color/tests/Graphics/Color/Space/CIE1931/: IlluminantSpec.hs  RGBSpec.hs
Color/tests/Graphics/Color/Space/CIE1976/: LABSpec.hs  LUVSpec.hs
Color/tests/Graphics/Color/Space/RGB/: AdobeRGBSpec.hs  SRGBSpec.hs
Color/tests/Graphics/Color/Space/YUV/: YCbCrSpec.hs
Color/tests/Graphics/Color/Standard/: RALSpec.hs
color-space/: CHANGELOG.md  README.md  color-space.cabal
color-space/bench/: Conversion.hs
color-space/src/Graphics/: ColorModel.hs  ColorSpace.hs  Pixel.hs
color-space/src/Graphics/Color/: Algebra.hs  Model.hs  Pixel.hs  Space.hs
color-space/src/Graphics/Color/Adaptation/: Internal.hs  VonKries.hs
color-space/src/Graphics/Color/Illuminant/: CIE1964.hs
color-space/src/Graphics/Color/Model/: Alpha.hs  CMYK.hs  HSI.hs  HSL.hs  HSV.hs  Internal.hs  RGB.hs  Y.hs  YCbCr.hs
color-space/src/Graphics/Color/Space/: CIE1931.hs  Internal.hs  RGB.hs
color-space/src/Graphics/Color/Space/CIE1931/: XYZ.hs
color-space/src/Graphics/Color/Space/CIE1976/: LAB.hs
color-space/src/Graphics/Color/Space/RGB/: AdobeRGB.hs  Alternative.hs  Internal.hs  Luma.hs  SRGB.hs  VGamut.hs
color-space/src/Graphics/Color/Standard/: RAL.hs
color-space/src/Graphics/ColorAdaptation/: .#Internal.hs  Internal.hs  VonKries.hs
color-space/src/Graphics/ColorModel/: Alpha.hs  Binary.hs  CMYK.hs  Complex.hs  Elevator.hs  HSI.hs  HSL.hs  HSV.hs  Helpers.hs  Internal.hs  InternalAlt.hs  RGB.hs  Y.hs  YCbCr.hs
color-space/src/Graphics/ColorSpace/: Adaptation.hs  Algebra.hs  Binary.hs  CIE1931.hs  CMYK.hs  HSI.hs  ITU.hs  Internal.hs  RGB.hs  RedGreenBlue.hs  Y.hs  YCbCr.hs
color-space/src/Graphics/ColorSpace/CIE1931/: Illuminant.hs  Illuminants.hs  XYZ.hs
color-space/src/Graphics/ColorSpace/CIE1964/: Illuminant.hs
color-space/src/Graphics/ColorSpace/CIE1976/: LAB.hs
color-space/src/Graphics/ColorSpace/Derived/RedGreenBlue/: AdobeRGB.hs  SRGB.hs
color-space/src/Graphics/ColorSpace/ITU/: Rec709.hs
color-space/src/Graphics/ColorSpace/RGB/: AdobeRGB.hs  Alternative.hs  Derived.hs  ITU.hs  Internal.hs  InternalBackup.hs  Luma.hs  S.hs  SRGB.hs  VGamut.hs
color-space/src/Graphics/ColorSpace/RGB/Alternative/: HSI.hs  HSL.hs  HSV.hs  YCbCr.hs
color-space/src/Graphics/ColorSpace/RGB/Derived/: AdobeRGB.hs  SRGB.hs
color-space/src/Graphics/ColorSpace/RGB/ITU/: Rec470.hs  Rec601.hs  Rec709.hs
color-space/src/Graphics/ColorSpace/RedGreenBlue/: AdobeRGB.hs  Derived.hs  Internal.hs  SRGB.hs
color-space/src/Graphics/ColorSpace/RedGreenBlue/Alternative/: HSI.hs
color-space/src/Graphics/ColorSpace/RedGreenBlue/Derived/: AdobeRGB.hs  SRGB.hs
color-space/src/Graphics/ColorSpace/YUV/: Y.hs  YCbCr.hs
color-space/src/Graphics/ColorStandard/: RAL.hs
color-space/src/Graphics/Pixel/: ColorSpace.hs  Internal.hs
color-space/tests/: Main.hs
color-space/tests/Graphics/: ColorModelSpec.hs  ColorSpaceSpec.hs
color-space/tests/Graphics/Color/Model/: CMYKSpec.hs  Common.hs  HSISpec.hs  HSLSpec.hs  HSVSpec.hs  RGBSpec.hs
color-space/tests/Graphics/Color/Space/: Common.hs
color-space/tests/Graphics/Color/Space/CIE1931/: IlluminantSpec.hs
color-space/tests/Graphics/Color/Space/CIE1976/: LABSpec.hs
color-space/tests/Graphics/Color/Space/RGB/: SRGBSpec.hs
color-space/tests/Graphics/Color/Space/YUV/: YCbCrSpec.hs
color-space/tests/Graphics/Color/Standard/: RALSpec.hs
color-space/tests/Graphics/ColorModel/: CMYKSpec.hs  Common.hs  HSISpec.hs  HSLSpec.hs  HSVSpec.hs  RGBSpec.hs  YCbCrSpec.hs
color-space/tests/Graphics/ColorSpace/: Common.hs
color-space/tests/Graphics/ColorSpace/CIE1931/: IlluminantSpec.hs  IlluminantsSpec.hs
color-space/tests/Graphics/ColorSpace/CIE1976/: LABSpec.hs
color-space/tests/Graphics/ColorSpace/ITU/: Rec709Spec.hs
color-space/tests/Graphics/ColorSpace/RGB/: SRGBSpec.hs
color-space/tests/Graphics/ColorSpace/RGB/Derived/: SRGBSpec.hs
color-space/tests/Graphics/ColorSpace/RGB/ITU/: Rec709Spec.hs
color-space/tests/Graphics/ColorSpace/YUV/: YCbCrSpec.hs
(+63 files in other folders)
