name:                Color
version:             0.1.1
synopsis:            Color spaces and conversions between them
description:         Please see the README on GitHub at <https://github.com/lehins/Color#readme>
homepage:            https://github.com/lehins/Color
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019-2020 Alexey Kuleshevich
category:            Graphics
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10
build-type:          Custom
tested-with:          GHC == 8.4.3
                    , GHC == 8.4.4
                    , GHC == 8.6.3
                    , GHC == 8.6.4
                    , GHC == 8.6.5
                    , GHC == 8.8.1

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Color.Algebra
                     , Graphics.Color.Algebra.Binary
                     , Graphics.Color.Adaptation
                     , Graphics.Color.Adaptation.VonKries
                     -- , Graphics.Color.Adaptation.CIE1994
                     -- , Graphics.Color.Adaptation.CMCCAT2000
                     -- , Graphics.Color.Adaptation.Fairchild
                     , Graphics.Color.Illuminant.CIE1931
                     , Graphics.Color.Illuminant.CIE1964
                     , Graphics.Color.Illuminant.ICC.PCS
                     , Graphics.Color.Illuminant.ITU.Rec470
                     , Graphics.Color.Illuminant.ITU.Rec601
                     , Graphics.Color.Illuminant.Wikipedia
                     , Graphics.Color.Model
                     , Graphics.Color.Space
                     -- , Graphics.Color.Space.CIE1931.RGB
                     , Graphics.Color.Space.CIE1931.XYZ
                     , Graphics.Color.Space.CIE1976.LAB
                     -- , Graphics.Color.Space.CIE1976.LAB.LCH
                     -- , Graphics.Color.Space.CIE1976.LAB.HLC
                     -- , Graphics.Color.Space.CIE1976.LUV
                     , Graphics.Color.Space.RGB
                     , Graphics.Color.Space.RGB.SRGB
                     , Graphics.Color.Space.RGB.AdobeRGB
                     , Graphics.Color.Space.RGB.Alternative
                     , Graphics.Color.Space.RGB.Alternative.CMYK
                     , Graphics.Color.Space.RGB.Alternative.HSI
                     , Graphics.Color.Space.RGB.Alternative.HSV
                     , Graphics.Color.Space.RGB.Alternative.HSL
                     , Graphics.Color.Space.RGB.Alternative.YCbCr
                     , Graphics.Color.Space.RGB.Derived.SRGB
                     , Graphics.Color.Space.RGB.Derived.AdobeRGB
                     , Graphics.Color.Space.RGB.ITU.Rec470
                     , Graphics.Color.Space.RGB.ITU.Rec601
                     , Graphics.Color.Space.RGB.ITU.Rec709
                     , Graphics.Color.Space.RGB.Luma
                     -- , Graphics.Color.Space.RGB.SC
                     -- , Graphics.Color.Space.RGB.AdobeWideGamut
                     -- , Graphics.Color.Space.RGB.ProPhoto
                     -- , Graphics.Color.Space.RGB.DCI_P3

                     -- , Graphics.Color.Space.LMS
                     , Graphics.Color.Standard.RAL
                     , Graphics.Pixel
                     , Graphics.Pixel.ColorSpace

  other-modules:       Graphics.Color.Adaptation.Internal
                     , Graphics.Color.Algebra.Elevator
                     , Graphics.Color.Model.CMYK
                     , Graphics.Color.Model.Internal
                     , Graphics.Color.Model.Alpha
                     , Graphics.Color.Model.RGB
                     , Graphics.Color.Model.HSI
                     , Graphics.Color.Model.HSL
                     , Graphics.Color.Model.HSV
                     , Graphics.Color.Model.Y
                     , Graphics.Color.Model.YCbCr
                     , Graphics.Color.Space.Internal
                     , Graphics.Color.Space.RGB.Internal
                     , Graphics.Pixel.Internal
  build-depends:       base            >= 4.11 && < 5
                     , deepseq
                     , data-default-class
                     , vector          >= 0.10

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Graphics.Color.Illuminant.WikipediaSpec
                    , Graphics.Color.Model.Common
                    , Graphics.Color.Model.CMYKSpec
                    , Graphics.Color.Model.HSISpec
                    , Graphics.Color.Model.HSLSpec
                    , Graphics.Color.Model.HSVSpec
                    , Graphics.Color.Model.RGBSpec
                    , Graphics.Color.Space.Common
                    , Graphics.Color.Space.CIE1976.LABSpec
                    , Graphics.Color.Space.RGB.SRGBSpec
                    , Graphics.Color.Space.RGB.Derived.SRGBSpec
                    , Graphics.Color.Space.RGB.ITU.Rec709Spec
                    , Graphics.Color.Space.YUV.YCbCrSpec
                    , Graphics.Color.Standard.RALSpec
                    , Spec
  build-depends:      HUnit
                    , QuickCheck
                    , base             >= 4.8 && < 5
                    , Color
                    , colour
                    , hspec
                    , random
                    , vector

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -freduction-depth=0

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
               , QuickCheck
               , Color
               , template-haskell
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded


benchmark conversion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Conversion.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , Color
                     , colour
                     , deepseq
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/Color
