name:                color-space
version:             0.1.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/color-space#readme>
homepage:            https://github.com/lehins/color-space
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.ColorModel
                     -- , Graphics.ColorModel.Binary
                     -- , Graphics.ColorModel.Complex
                     -- , Graphics.ColorModel.CMYK
                     , Graphics.ColorModel.Internal
                     , Graphics.ColorModel.Alpha
                     , Graphics.ColorModel.RGB
                     , Graphics.ColorModel.HSI
                     , Graphics.ColorModel.HSL
                     , Graphics.ColorModel.HSV
                     , Graphics.ColorModel.YCbCr
                     , Graphics.ColorSpace
                     , Graphics.ColorSpace.Algebra
                     , Graphics.ColorSpace.RGB
                     , Graphics.ColorSpace.RGB.SRGB
                     , Graphics.ColorSpace.RGB.AdobeRGB
                     -- , Graphics.ColorSpace.RGB.Alternative
                     , Graphics.ColorSpace.RGB.Alternative.HSI
                     -- , Graphics.ColorSpace.RGB.Alternative.HSV
                     -- , Graphics.ColorSpace.RGB.Alternative.HSL
                     -- , Graphics.ColorSpace.RGB.Alternative.YCbCr
                     -- , Graphics.ColorSpace.RGB.Alternative.CMYK
                     --, Graphics.ColorSpace.Derived.RGB.SRGB
                     --, Graphics.ColorSpace.Derived.RGB.AdobeRGB
                     --, Graphics.ColorSpace.RGB.Derived
                     , Graphics.ColorSpace.RGB.Derived.SRGB
                     , Graphics.ColorSpace.RGB.Derived.AdobeRGB
                     -- , Graphics.ColorSpace.RGB.SC
                     -- , Graphics.ColorSpace.RGB.AdobeWideGamut
                     -- , Graphics.ColorSpace.RGB.ProPhoto
                     -- , Graphics.ColorSpace.Common
                     -- , Graphics.ColorSpace.Y
                     -- , Graphics.ColorSpace.Binary
                     -- , Graphics.ColorSpace.Complex

                     -- , Graphics.ColorSpace.LMS
                     -- , Graphics.ColorSpace.DCI_P3
                     -- , Graphics.ColorSpace.CIE1931.RGB
                     --, Graphics.ColorSpace.CIE1931
                     , Graphics.ColorSpace.CIE1931.XYZ
                     , Graphics.ColorSpace.CIE1931.Illuminants
                     -- , Graphics.ColorSpace.CIE1976.LUV
                     -- , Graphics.ColorSpace.CIE1976.LAB.LCH
                     -- , Graphics.ColorSpace.CIE1976.LAB
                     -- , Graphics.ColorSpace.CIE1976.LAB.HLC
                     -- , Graphics.ColorSpace.Standard.RAL -- https://en.wikipedia.org/wiki/List_of_RAL_colors

                     -- , Graphics.ColorSpace.Chromaticities -- eg. ITU-R BT.709
                     -- , Graphics.ColorSpace.CMYK


                     --   Graphics.ColorSpace
                     -- , Graphics.ColorSpace.Binary
                     -- , Graphics.ColorSpace.Complex
                     -- , Graphics.ColorSpace.Y
                     -- , Graphics.ColorSpace.YCbCr
                     -- , Graphics.ColorSpace.RGB

  other-modules:       Graphics.ColorModel.Elevator
                     , Graphics.ColorSpace.Internal
                     , Graphics.ColorSpace.RGB.Internal
  build-depends:       base            >= 4.8 && < 5
                     , deepseq
                     , data-default-class
                     , vector          >= 0.10

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Graphics.ColorModelSpec
                    , Graphics.ColorModel.HSISpec
                    , Graphics.ColorModel.HSLSpec
                    , Graphics.ColorModel.HSVSpec
                    , Graphics.ColorModel.RGBSpec
                    , Graphics.ColorModel.YCbCrSpec
                    , Graphics.ColorSpaceSpec
                    , Graphics.ColorSpace.CIE1931.IlluminantsSpec
                    , Graphics.ColorSpace.RGB.SRGBSpec
                    , Graphics.ColorSpace.RGB.Derived.SRGBSpec
                    , Spec
  build-depends:      HUnit
                    , QuickCheck
                    , base             >= 4.8 && < 5
                    , color-space
                    , colour
                    , hspec
                    , random

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded

source-repository head
  type:     git
  location: https://github.com/lehins/color-space
