name:                color-space
version:             0.1.0
synopsis:            Collection of common color spaces and coversions between them
description:         Please see the README on GitHub at <https://github.com/lehins/color-space#readme>
homepage:            https://github.com/lehins/color-space
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Graphics
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10
build-type:          Custom
tested-with:          GHC == 8.4.3
                    , GHC == 8.4.4
                    , GHC == 8.6.3
                    , GHC == 8.6.4
                    , GHC == 8.6.5
                    , GHC == 8.8.1

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.ColorModel
                     , Graphics.ColorModel.Binary
                     , Graphics.ColorModel.Complex
                     , Graphics.ColorModel.CMYK
                     , Graphics.ColorModel.Internal
                     , Graphics.ColorModel.Alpha
                     , Graphics.ColorModel.RGB
                     , Graphics.ColorModel.HSI
                     , Graphics.ColorModel.HSL
                     , Graphics.ColorModel.HSV
                     , Graphics.ColorSpace
                     , Graphics.ColorSpace.Algebra
                     -- , Graphics.ColorSpace.CIE1931
                     -- , Graphics.ColorSpace.CIE1931.RGB
                     , Graphics.ColorSpace.CIE1931.XYZ
                     , Graphics.ColorSpace.CIE1931.Illuminant
                     -- , Graphics.ColorSpace.CIE1976.LUV
                     -- , Graphics.ColorSpace.CIE1976.LAB.LCH
                     -- , Graphics.ColorSpace.CIE1976.LAB
                     -- , Graphics.ColorSpace.CIE1976.LAB.HLC
                     -- , Graphics.ColorSpace.CIE1976.Illuminants
                     , Graphics.ColorSpace.RGB
                     , Graphics.ColorSpace.RGB.SRGB
                     , Graphics.ColorSpace.RGB.AdobeRGB
                     , Graphics.ColorSpace.RGB.Alternative.HSI
                     , Graphics.ColorSpace.RGB.Alternative.HSV
                     , Graphics.ColorSpace.RGB.Alternative.HSL
                     , Graphics.ColorSpace.RGB.Derived.SRGB
                     , Graphics.ColorSpace.RGB.Derived.AdobeRGB
                     , Graphics.ColorSpace.RGB.ITU.Rec470
                     , Graphics.ColorSpace.RGB.ITU.Rec601
                     , Graphics.ColorSpace.RGB.ITU.Rec709
                     , Graphics.ColorSpace.YUV.Y
                     , Graphics.ColorSpace.YUV.YCbCr
                     -- , Graphics.ColorSpace.RGB.SC
                     -- , Graphics.ColorSpace.RGB.AdobeWideGamut
                     -- , Graphics.ColorSpace.RGB.ProPhoto
                     -- , Graphics.ColorSpace.Common
                     -- , Graphics.ColorSpace.Y
                     -- , Graphics.ColorSpace.Binary
                     -- , Graphics.ColorSpace.Complex

                     -- , Graphics.ColorSpace.LMS
                     -- , Graphics.ColorSpace.DCI_P3
                     -- , Graphics.ColorStandard.RAL -- https://en.wikipedia.org/wiki/List_of_RAL_colors

                     -- , Graphics.ColorSpace.CMYK


                     --   Graphics.ColorSpace
                     -- , Graphics.ColorSpace.Binary
                     -- , Graphics.ColorSpace.Complex
                     -- , Graphics.ColorSpace.Y
                     -- , Graphics.ColorSpace.YCbCr
                     -- , Graphics.ColorSpace.RGB

  other-modules:       Graphics.ColorModel.Elevator
                     , Graphics.ColorSpace.Internal
                     , Graphics.ColorSpace.RGB.Internal
  build-depends:       base            >= 4.11 && < 5
                     , deepseq
                     , data-default-class
                     , vector          >= 0.10

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Graphics.ColorModel.Common
                    , Graphics.ColorModel.CMYKSpec
                    , Graphics.ColorModel.HSISpec
                    , Graphics.ColorModel.HSLSpec
                    , Graphics.ColorModel.HSVSpec
                    , Graphics.ColorModel.RGBSpec
                    , Graphics.ColorSpace.Common
                    , Graphics.ColorSpace.CIE1931.IlluminantSpec
                    , Graphics.ColorSpace.RGB.SRGBSpec
                    , Graphics.ColorSpace.RGB.Derived.SRGBSpec
                    , Graphics.ColorSpace.RGB.ITU.Rec709Spec
                    , Graphics.ColorSpace.YUV.YCbCrSpec
                    , Spec
  build-depends:      HUnit
                    , QuickCheck
                    , base             >= 4.8 && < 5
                    , color-space
                    , colour
                    , hspec
                    , random

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
               , QuickCheck
               , color-space
               , mersenne-random-pure64
               , random
               , splitmix >= 0.0.1
               , template-haskell
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded


benchmark conversion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Conversion.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , color-space
                     , colour
                     , deepseq
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/color-space
